UI on flask framework

--- a/templates/output.html
+++ b/templates/output.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review Mania</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -23,24 +23,25 @@
 
     <!-- The nav menu -->
     <nav class="nav">
-        <a class="nav-item" href="../home/">Home</a>
-        <a class="nav-item" href="#">About</a>
+        <a class="nav-item" href="http://acw86.pythonanywhere.com/index">Home</a>
+        <a class="nav-item" href="http://acw86.pythonanywhere.com/about">About</a>
     </nav>
 
     <!-- Just dummy content like in the animated gif -->
     <section class="dummy-content">
         <div class="circle">
-            <img src="../static/logo.jpg"/>
+            <img src="logo.jpg"/>
         </div>
         <div class="square-behind"></div>
-        <div class= "break" />
-        <img src="../static/aboutus.jpg"/>
+        <img src="hotel.png"/>
     </section>
-    </div>
+        <div class="textarea">
+        <script>
+           // document.write();
+        </script>
+        </div>
 
-</div>
+    </div>
 
 </body>
 </html>
-
-
