--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review Mania</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 
     <!-- The nav menu -->
     <nav class="nav">
-        <a class="nav-item" href="../home/">Home</a>
+        <a class="nav-item" href="/">Home</a>
         <a class="nav-item" href="#">About</a>
     </nav>
 
