--- a/templates/output.html
+++ b/templates/output.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review Mania</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
 
-<div class="container">
+<div class="container" style="overflow:scroll">
     <!-- This checkbox will give us the toggle behavior, it will be hidden, but functional -->
     <input id="toggle" type="checkbox">
 
@@ -23,25 +23,25 @@
 
     <!-- The nav menu -->
     <nav class="nav">
-        <a class="nav-item" href="http://acw86.pythonanywhere.com/index">Home</a>
-        <a class="nav-item" href="http://acw86.pythonanywhere.com/about">About</a>
+        <a class="nav-item" href="/">Home</a>
+        <a class="nav-item" href="/about">About</a>
     </nav>
 
     <!-- Just dummy content like in the animated gif -->
     <section class="dummy-content">
         <div class="circle">
-            <img src="logo.jpg"/>
+            <img src="../static/logo.jpg"/>
         </div>
         <div class="square-behind"></div>
-        <img src="hotel.png"/>
+        <img src="../static/hotel.png"/>
     </section>
-        <div class="textarea">
-        <script>
-           // document.write();
-        </script>
-        </div>
-
-    </div>
+    <list>
+        {% for review_text in reviews %}
+            <li>{{review_text}}</li>
+            <br>
+        {% endfor %}
+    </list>
+</div>
 
 </body>
 </html>
