Changed file structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,16 +36,10 @@
         <img src="../static/summary.jpg"/>
     </section>
 
-    <form method="POST" action="/submit">
-        <input type="text" name="hotelUrl" >
-        <input type="submit">
+    <form class="textarea" method="POST" action="/submit">
+        <input class="textarea" name="hotelUrl" >
+        <input class = "submit" type="submit">
     </form>
-
-{#    <div class="textarea">#}
-{#        <textarea class="form-control" rows="18" cols="70"></textarea>#}
-{#        <button type="button">Submit</button>#}
-{#    </div>#}
-
 </div>
 
 </body>
