--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -310,10 +310,15 @@ a {
 
 .textarea {
   display: inline-block;
-  width: 75px;
-  height: 75px;
-  margin-left: 175px;
+  width: 300px;
+  height: 100px;
+  margin-left: 125px;
   margin-top: 20px;
+}
+
+.submit {
+  margin-left: 125px;
+  margin-top: 10px;
 }
 
 .break {
